apps/msevcik-ambulance-webapi/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
 name: msevcik-ambulance-webapi
spec:
 parentRefs:
   - name: wac-hospital-gateway
     namespace: wac-hospital
   - name: wac-hospital-gateway  # Hack to make it work for common cluster
     namespace: wac-hospital-system
 rules:
   - matches:
       - path:
           type: PathPrefix
           value: /msevcik-api
     filters:
       - type: URLRewrite
         urlRewrite:
           path:
             type: ReplacePrefixMatch
             replacePrefixMatch: /api
     backendRefs:
       - group: ""
         kind: Service
         name: msevcik-ambulance-webapi
         port: 80
   - matches:
       - path:
           type: PathPrefix
           value: /msevcik-openapi-ui
     backendRefs:
        - group: ""
          kind: Service
          name: msevcik-openapi-ui
          port: 80
   - matches:
      - path:
          type: Exact
          value: /msevcik-openapi
     filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplaceFullPath
            replaceFullPath: /openapi
     backendRefs:
        - group: ""
          kind: Service
          name: msevcik-ambulance-webapi
          port: 80
